# lepus

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LEPUS.md  launch_lepus.cmd  launch_lepus.sh  mozconfig.lepus
.github/workflows/: build-lepus.yml  test-contract.yml
accessible/base/: Platform.h
accessible/ipc/: DocAccessibleParent.cpp  DocAccessibleParent.h  RemoteAccessible.cpp
accessible/mac/: Platform.mm  mozAccessible.h  mozAccessible.mm
browser/components/: moz.build
contracts/hvym-name-registry/: Cargo.toml
contracts/scripts/: contract_id.txt  deploy.py  test_contract.py
docs/: AI_SYSTEMS.md  BRANDING.md  BUILD.md  DISTRIBUTED_CRAWLING.md  E2E_DOMAIN_TEST.md  HVYM-SUBNET-ARCHITECTURE.md  HVYM-SUBNET.md  LUPUS.md  LUPUS_INTEGRATION.md  NAME-REGISTRY-CONTRACT-ARCHITECTURE.md  NAME-REGISTRY-CONTRACT.md  PELT-AUTHORING-GUIDE.md  PELT-SYSTEM-ARCHITECTURE.md  PELT-SYSTEM.md
dom/: moz.build
dom/base/: Document.cpp  nsIContent.h
dom/canvas/: CanvasRenderingContext2D.h
dom/html/: HTMLPeltElement.cpp  HTMLPeltElement.h  moz.build  nsGenericHTMLElement.h
dom/ipc/: ContentParent.cpp
dom/pelt/: PeltLinkHandler.cpp  PeltLinkHandler.h  moz.build
dom/webidl/: HTMLPeltElement.webidl  moz.build
gfx/: moz.build
gfx/thebes/: gfxUtils.cpp
gfx/vello_bindings/: Cargo.toml  cbindgen.toml  moz.build
gfx/vello_bindings/src/: animation.rs  cache.rs  compositing.rs  lib.rs  nine_slice.rs  profiler.rs  renderer.rs  token_resolver.rs  transitions.rs
gfx/vello_bindings/tests/: nine_slice_debug.rs
layout/: moz.build
layout/generic/: nsIFrame.cpp
layout/painting/: nsDisplayItemTypesList.inc
layout/pelt/: PeltRegistry.cpp  PeltRegistry.h  moz.build  nsDisplayPelt.cpp  nsDisplayPelt.h
layout/style/: FontFaceImpl.cpp
netwerk/: moz.build
netwerk/dns/: nsDNSService2.cpp  nsHostResolver.cpp
netwerk/hvym/: Cargo.toml  HvymProtocolHandler.cpp  HvymProtocolHandler.h  cbindgen.toml  moz.build
netwerk/hvym/src/: address.rs  lib.rs  resolver.rs  tunnel.rs
netwerk/hvym/tests/scripts/: test_domain_e2e.py
netwerk/hvym/tests/scripts/name_registry/: README.md  __init__.py  bindings.py
parser/html/: nsHtml5ElementName.cpp  nsHtml5ElementName.h
pelt-poc/: README.md  index.html  pelt-engine.js  test-9slice.html  test-advanced.html  test-hover.html  test-in-browser.html  test-no-bridge.html
scripts/: setup-local-build.sh
supply-chain/: config.toml
tools/pelt-kit/: Cargo.toml  PELT-PACKAGE.md
tools/pelt-kit/samples/heavymeta-neon/: theme.json
tools/pelt-kit/src/: main.rs
widget/: ScrollbarDrawing.cpp
(+63 files in other folders)
