[package]
name = "vello_bindings"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "FFI bindings for Vello GPU 2D renderer integration with Gecko"

[dependencies]
# Dependencies are commented until vendored via ./mach vendor rust.
# Uncomment and run: ./mach vendor rust && ./mach cargo vet
#
# vello = { version = "0.8", default-features = false }
# vello_svg = { version = "0.9" }
# usvg = { version = "0.46" }
# wgpu = { version = "28.0" }

# For now, use only std types so the crate compiles standalone.

[lib]
name = "vello_bindings"
