[package]
name = "pelt-kit"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "CLI tool for creating, validating, and previewing Lepus pelt skins"

[[bin]]
name = "pelt-kit"
path = "src/main.rs"

[dependencies]
# Uncomment once building outside the Firefox workspace:
# usvg = "0.46"
# clap = { version = "4", features = ["derive"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

[workspace]
# Standalone tool — not part of the Firefox workspace
